--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,12 @@
 body {
 }
 
+
+.center {
+    margin-left: auto;
+    margin-right: auto;
+}
+
 /*===== HEADER HERO =====*/
 .header_hero {
     height: 1000px;
